methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:20: error: value Black is not a member of object java.awt.Color
  centre(Color.white,Color.Black)
                           ^